# Assignment-5

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  bigram_model.py  main.py  rnn_model.py
llm/: __init__.py  data.py  inference.py  reward.py  rl_train.py  sft_train.py
models/: HOST_MARKER.txt
